--- a/bukti.html
+++ b/bukti.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title:  "DAFTAR PLAGIARISME TUGAS I ALPRO SE-44-02"
+comments: true
+permalink: /bukti/
+---
 <h1>DAFTAR PLAGIARISME TUGAS I ALPRO SE-44-02</h1><h3>Asisten Dosen: Ryan Abdurohman</h3><hr><h4>Soal B versi 1<h4><hr><table><tr><th>1302204056</th><th>1302204059</th><th>1302203120</th><th>1302201135</th><th>1302204093</th><th>1302200087</th><th>1302204075</th><th>1302204069</th><th>1302204026</th><th>1302200020</th><th>1302204046</th></tr><tr><th>MOCHAMMAD KAORI RAHADIAN</th><th>MUHAMMAD ABIEB BASNURIL</th><th>ZACHARIA BACHTIAR</th><th>ISMI WARDANITA</th><th>ANNISA NUR AZIZA</th><th>ARIALDI RAHMADI PUTRA</th><th>RODO IDOLA NATHANAEL MARBUN</th><th>BAYU EVRI SAPUTRA</th><th>ADHA SURYA DWIKA</th><th>ABDILLAH HASAN</th><th>FAHRIZAL HILMI ARFIAN</th></tr><tr><td><pre>PROGRAM Data_Mahasiswa_TelU
 KAMUS
     ma,mi,mo,h,check,temp,tahun : integer
